Fix mobile chrome overflow

--- a/components/index.module.css
+++ b/components/index.module.css
@@ -173,7 +173,7 @@
     transform: translate(0, 0);
   }
   .playerInfoPane.hidden {
-    transform: translate(100vw, 0);
+    transform: translate(-100vw, 0);
   }
 }
 
@@ -193,7 +193,7 @@
     transform: translate(0, 0);
   }
   .playerInfoPane.hidden {
-    transform: translate(100vw, 0);
+    transform: translate(-100vw, 0);
   }
 }
 
